--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
     "jquery": "^3.7.1",
     "jquery.counterup": "^2.1.0",
     "js-cookie": "^3.0.5",
@@ -59,6 +61,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-doc-to-pdf": "^1.0.2",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.2.1",
     "react-image-lightbox": "^5.1.4",
     "react-paginate": "^8.3.0",
