--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "sass-loader": "^16.0.0",
     "sockjs-client": "^1.6.1",
     "start": "^5.1.0",
+    "sweetalert2": "^11.22.0",
     "swiper": "^11.2.1",
     "util": "^0.12.5",
     "waypoints": "^4.0.1",
